Trabalho 2/Untitled Folder/TrabalhoLexico.java
/* Generated By:JavaCC: Do not edit this line. TrabalhoLexico.java */
    public class TrabalhoLexico implements TrabalhoLexicoConstants {
        public static void main(String[] args){
            try{
                new TrabalhoLexico(new java.io.FileInputStream(args[0])).Start();
            } catch (java.io.FileNotFoundException ex) {
                System.out.println("Arquivo " + args[0] + " nao foi encontrado");
                System.exit(-1);
            }catch (ParseException ex) {
                System.out.println(ex.getMessage());
                System.exit(-1);
            } catch (TokenMgrError ex) {
                System.out.println(ex.getMessage());
                System.exit(-1);
            }
        }

//TOKEN: { <INTEGER: (<DIGIT>)+> }

/* Início */
  static final public void Start() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
    case ELSEDEF:
    case IF:
    case IFDEF:
    case ELSIF:
    case ELSIFDEF:
    case WHILE:
    case BREAK:
    case RETURN:
    case FOR:
    case FUNCTION:
    case TYPE:
    case PROCEDURE:
    case GLOBAL:
    case PUBLIC:
    case EXPORT:
    case OVERRIDE:
    case ATOM:
    case INTEGER:
    case SEQUENCE:
    case OBJECT:
    case NAMESPACE:
    case CONSTANT:
    case ENUM:
    case BY:
    case SWITCH:
    case DO:
    case THEN:
    case CASE:
    case CONTINUE:
    case RETRY:
    case EXIT:
    case TO:
    case WITH:
    case WITHOUT:
    case PROFILE:
    case PROFILE_TIME:
    case TRACE:
    case BATCH:
    case TYPE_CHECK:
    case INDIRECT_INCLUDES:
    case INLINE:
    case WARNING:
    case SAVE:
    case RESTORE:
    case STRICT:
    case FALLTHRU:
    case ENTRY:
    case LOOP:
    case GOTO:
    case NOT:
    case AND:
    case OR:
    case XOR:
    case INCLUDE:
    case AS:
    case LABEL:
    case COMMA:
    case SEMICOLON:
    case LPAREN:
    case RPAREN:
    case LCHAVE:
    case RCHAVE:
    case LCOLCH:
    case RCOLCH:
    case NEWLINE:
    case INDENT:
    case MUL_OP:
    case ADD_OP:
    case ASSIGN_OP:
    case REL_OP:
    case EQUAL_SIGN:
    case USCORE:
    case CHAR:
    case ESCCHAR:
    case NUMBER:
    case STRING:
    case IDENTIFIER:
    case ATOMINTEGER:
    case ATOMREAL:
      Read();
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Read() throws ParseException, TokenMgrError, ParseException {
    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      t = jj_consume_token(ELSE);
              System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctELSE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case ELSEDEF:
      t = jj_consume_token(ELSEDEF);
                 System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctELSEDEF\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case IF:
      t = jj_consume_token(IF);
            System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctIF\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case IFDEF:
      t = jj_consume_token(IFDEF);
               System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctIFDEF\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case ELSIF:
      t = jj_consume_token(ELSIF);
               System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctELSIF\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case ELSIFDEF:
      t = jj_consume_token(ELSIFDEF);
                  System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctELSIFDEF\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case WHILE:
      t = jj_consume_token(WHILE);
               System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctWHILE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case BREAK:
      t = jj_consume_token(BREAK);
               System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctBREAK\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case RETURN:
      t = jj_consume_token(RETURN);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctRETURN\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case FOR:
      t = jj_consume_token(FOR);
             System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctFOR\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case FUNCTION:
      t = jj_consume_token(FUNCTION);
                  System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctFUNCTION\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case TYPE:
      t = jj_consume_token(TYPE);
              System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctTYPE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case PROCEDURE:
      t = jj_consume_token(PROCEDURE);
                   System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctPROCEDURE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case GLOBAL:
      t = jj_consume_token(GLOBAL);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctGLOBAL\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case PUBLIC:
      t = jj_consume_token(PUBLIC);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctPUBLIC\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case EXPORT:
      t = jj_consume_token(EXPORT);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctEXPORT\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case OVERRIDE:
      t = jj_consume_token(OVERRIDE);
                  System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctOVERRIDE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case ATOM:
      t = jj_consume_token(ATOM);
              System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctATOM\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case INTEGER:
      t = jj_consume_token(INTEGER);
                 System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctINTEGER\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case SEQUENCE:
      t = jj_consume_token(SEQUENCE);
                  System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctSEQUENCE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case OBJECT:
      t = jj_consume_token(OBJECT);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctOBJECT\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case NAMESPACE:
      t = jj_consume_token(NAMESPACE);
                   System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctNAMESPACE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case CONSTANT:
      t = jj_consume_token(CONSTANT);
                  System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctCONSTANT\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case ENUM:
      t = jj_consume_token(ENUM);
              System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctENUM\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case BY:
      t = jj_consume_token(BY);
            System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctBY\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case SWITCH:
      t = jj_consume_token(SWITCH);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctSWITCH\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case DO:
      t = jj_consume_token(DO);
            System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctDO\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case THEN:
      t = jj_consume_token(THEN);
              System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctTHEN\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case CASE:
      t = jj_consume_token(CASE);
              System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctCASE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case CONTINUE:
      t = jj_consume_token(CONTINUE);
                  System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctCONTINUE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case RETRY:
      t = jj_consume_token(RETRY);
               System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctRETRY\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case EXIT:
      t = jj_consume_token(EXIT);
              System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctEXIT\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case TO:
      t = jj_consume_token(TO);
            System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctTO\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case WITH:
      t = jj_consume_token(WITH);
              System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctWITH\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case WITHOUT:
      t = jj_consume_token(WITHOUT);
                 System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctWITHOUT\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case PROFILE:
      t = jj_consume_token(PROFILE);
                 System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctPROFILE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case PROFILE_TIME:
      t = jj_consume_token(PROFILE_TIME);
                      System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctPROFILE_TIME\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case TRACE:
      t = jj_consume_token(TRACE);
               System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctTRACE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case BATCH:
      t = jj_consume_token(BATCH);
               System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctBATCH\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case TYPE_CHECK:
      t = jj_consume_token(TYPE_CHECK);
                    System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctTYPE_CHECK\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case INDIRECT_INCLUDES:
      t = jj_consume_token(INDIRECT_INCLUDES);
                           System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctINDIRECT_INCLUDES\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case INLINE:
      t = jj_consume_token(INLINE);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctINLINE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case WARNING:
      t = jj_consume_token(WARNING);
                 System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctWARNING\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case SAVE:
      t = jj_consume_token(SAVE);
              System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctSAVE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case RESTORE:
      t = jj_consume_token(RESTORE);
                 System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctRESTORE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case STRICT:
      t = jj_consume_token(STRICT);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctSTRICT\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case FALLTHRU:
      t = jj_consume_token(FALLTHRU);
                  System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctFALLTHRU\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case ENTRY:
      t = jj_consume_token(ENTRY);
               System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctENTRY\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case LOOP:
      t = jj_consume_token(LOOP);
              System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctLOOP\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case GOTO:
      t = jj_consume_token(GOTO);
              System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctGOTO\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case NOT:
      t = jj_consume_token(NOT);
             System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctNOT\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case AND:
      t = jj_consume_token(AND);
             System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctAND\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case OR:
      t = jj_consume_token(OR);
            System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctOR\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case XOR:
      t = jj_consume_token(XOR);
             System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctXOR\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case INCLUDE:
      t = jj_consume_token(INCLUDE);
                 System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctINCLUDE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case AS:
      t = jj_consume_token(AS);
            System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctAS\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case LABEL:
      t = jj_consume_token(LABEL);
               System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctLABEL\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case COMMA:
      t = jj_consume_token(COMMA);
               System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctCOMMA\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case SEMICOLON:
      t = jj_consume_token(SEMICOLON);
                   System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctSEMICOLON\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case LPAREN:
      t = jj_consume_token(LPAREN);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctLPAREN\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case RPAREN:
      t = jj_consume_token(RPAREN);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctRPAREN\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case LCHAVE:
      t = jj_consume_token(LCHAVE);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctLCHAVE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case RCHAVE:
      t = jj_consume_token(RCHAVE);
                System.out.println("@("+t.beginLine+","+t.beginColumn+")\u005ctRCHAVE\u005ct\u005ct - "+t.toString());
      Start();
      break;
    case LCOLCH:
      t = jj_consume_token(LCOLCH);
